Random changes typos, bugs and some rewording

--- a/workshop_2/scientific_python.ipynb
+++ b/workshop_2/scientific_python.ipynb
@@ -1,6 +1,6 @@
 {
  "metadata": {
-  "name": "scientific_python"
+  "name": ""
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -712,7 +712,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "And to use them the way we use Python's built in functions:\n",
+      "And to use them the same way we use Python's built in functions:\n",
       "\n",
       "    add(1, 3)"
      ]
@@ -741,7 +741,7 @@
       "\n",
       "First we have to create a variable representing the file we are interested in using, we do this using the open() function. \n",
       "\n",
-      "    my_file1 = open('test_data.txt', 'r')\n"
+      "    my_file1 = open('test_structure.xyz', 'r')\n"
      ]
     },
     {
@@ -765,10 +765,10 @@
      "source": [
       "To read the contents from the file for reading we can use the .read() method, after we've done so we must remember to close the file:\n",
       "\n",
-      "    my_file1_contents = my_file.read()\n",
+      "    my_file1_contents = my_file1.read()\n",
       "    my_file1.close()\n",
       "    \n",
-      "    print(my_file_contents)"
+      "    print(my_file1_contents)"
      ]
     },
     {
@@ -785,7 +785,7 @@
      "source": [
       "Alternatively we can can use the .readlines() method to extract the file as a list of strings where each element of the list corresponds to one of the lines in the file:\n",
       "  \n",
-      "    my_file1 = open('test_data.txt', 'r')\n",
+      "    my_file1 = open('test_structure.xyz', 'r')\n",
       "    my_file1_list_lines = my_file.readlines()\n",
       "    my_file1.close()\n",
       "\n",
@@ -793,10 +793,18 @@
      ]
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If we want to write a string to a file we open the file for writing using the 'w' flag, and then use write() method. Note that if you open a file for writing you **will overwrite whatever was initially in the file**:\n",
+      "If we want to write a string to a file we open the file for writing using the 'w' flag, and then use write() method. Note that if you open a file for writing you **will overwrite whatever was initially in the file**. Let's create a simple data string:\n",
       "   "
      ]
     },
@@ -819,8 +827,10 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "       \n",
-      "    my_file2 = open('test_structure.xyz', 'w')\n",
+      " Now we will create and write to a file named test_structure2.xyz:\n",
+      " \n",
+      " \n",
+      "    my_file2 = open('test_structure2.xyz', 'w')\n",
       "    my_file2.write(my_data)\n",
       "    my_file2.close()"
      ]
@@ -837,7 +847,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Open up new_test_data.txt in an editor and check it matches the above text."
+      "Open up test_structure2.xyz in an editor and check it matches the above text."
      ]
     },
     {
@@ -851,7 +861,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "my_file = open('test_structure.xyz', 'r')\n",
+      "my_file = open('test_structure2.xyz', 'r')\n",
       "my_file_list_lines = my_file.readlines()\n",
       "my_file.close()\n",
       "\n",
@@ -861,7 +871,7 @@
       "\n",
       "my_new_contents = \"\\n\".join(my_file1_list_lines)\n",
       "\n",
-      "my_file = open('test_data.txt', 'w')\n",
+      "my_file = open('test_structure2.xyz', 'w')\n",
       "my_file.write(my_new_contents)\n",
       "my_file.close()"
      ],
@@ -1063,21 +1073,41 @@
      ]
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "heading",
+     "level": 1,
      "metadata": {},
      "source": [
-      "## Plotting with Matplotlib\n",
-      "We can generally understand trends in data by using a plotting program to chart it. Python has a wonderful plotting library called [Matplotlib](http://matplotlib.sf.net). The IPython notebook interface we are using for these notes has that functionality built in.\n",
-      "\n",
-      "As an example, we have looked at two different functions, the Fibonacci function, and the factorial function, both of which grow faster than polynomially. Which one grows the fastest? Let's plot them. First, let's generate the Fibonacci sequence of length 20:"
+      "New Stuff!"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "With that out the way, we can now introduce some of Python's most popular plotting scientific libraries: [Matplotlib](http://matplotlib.org/), [Numpy](http://www.numpy.org/) and [scipy](http://www.scipy.org/)\n",
+      "With that out the way, we can now introduce some of Python's most popular scientific libraries: [Matplotlib](http://matplotlib.org/), [Numpy](http://www.numpy.org/) and [scipy](http://www.scipy.org/)\n",
       "\n",
+      "## Plotting with Matplotlib\n",
+      "Plotting is so common that the IPython notebook can be launched with plotting specifically enabled, that's what we were doing by includnig the extra '--pylab inline' commands while launching the notebook. Those extra commands invisibly added\n",
+      "\n",
+      "    from pylab import *\n",
+      "    \n",
+      "to the start of the notebook and means we can use functions from matplotlib like **plot**. The '=inline' part means the plots we create will be put directly into the notebook. This has the upside that we can see out plots alongside our code and data but the downside that they are static. If you omit the 'inline' when you launch ipython calls to **plot** will open up a window with the plot inside tha will allow you to interactively zoom in and out, move the axis etc. etc. \n",
+      "\n",
+      "As an example, we previous loaded up two different functions, the Fibonacci function, and the factorial function. Which one of these grows the fastest? Let's plot them. First, let's generate the Fibonacci sequence of length 20:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "    fibs = fibonacci(10)"
      ]
     },
@@ -1097,7 +1127,7 @@
       "\n",
       "    facts = []\n",
       "    for i in range(10):\n",
-      "        facts.append(factorial(i))"
+      "        facts.append( factorial(i) )"
      ]
     },
     {
@@ -1354,7 +1384,7 @@
      "metadata": {},
      "source": [
       "## Linspace, matrix functions, and plotting\n",
-      "The **linspace** command is a bit like range() but rather than making a list of integers instead if creates an array of  50 floating point numbers equally space between a starting and an ending value.\n",
+      "The **linspace** function is a bit like **range** but rather than returning a list of integers it returns an array of 50 floating point numbers equally space between a starting and an ending value.\n",
       "\n",
       "    np.linspace(0, 1)"
      ]
@@ -1389,7 +1419,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "**linspace** is an easy way to make coordinates for plotting. Functions in the numpy library can act on an entire vector (or even a matrix) of points at once. Thus,\n",
+      "**linspace** is an easy way to make coordinates for plotting. Functions in the numpy library can act on an entire vector (or even a matrix) of numbers at once. Thus,\n",
       "\n",
       "    x = np.linspace(0, 2*np.pi)\n",
       "    np.sin(x)"
@@ -1621,7 +1651,7 @@
      "metadata": {},
      "source": [
       "## Example: Finite Differences\n",
-      "Now that we have these tools in our toolbox, we can start to do some cool stuff with it. Many of the equations we want to solve in Physics involve differential equations. We want to be able to compute the derivative of functions:\n",
+      "Now that we have these tools in our toolbox, we can start to do some cool stuff with it. Many of the equations we want to solve in physics and chemistry involve differential equations. We want to be able to compute the derivative of functions:\n",
       "\n",
       "$$ y' = \\frac{y(x+h)-y(x)}{h} $$\n",
       "\n",
@@ -1690,7 +1720,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## One-Dimensional Harmonic Oscillator using Finite Difference\n",
+      "## One-Dimensional Harmonic Oscillator using Finite Difference (Optional Advanced material!)\n",
       "Now that we've convinced ourselves that finite differences aren't a terrible approximation, let's see if we can use this to solve the one-dimensional harmonic oscillator.\n",
       "\n",
       "We want to solve the time-independent Schrodinger equation\n",
@@ -2407,50 +2437,16 @@
      "metadata": {},
      "source": [
       "## More Sophisticated String Formatting and Processing\n",
-      "Strings are a big deal in most modern languages, and hopefully the previous sections helped underscore how versatile Python's string processing techniques are. We will continue this topic in this chapter.\n",
-      "\n",
-      "We can print out lines in Python using the print command. \n",
-      "\n",
-      "    print(\"I have 3 errands to run\")"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "In IPython we don't even need the print command, since it will display the last expression not assigned to a variable."
+      "Strings are a big deal in most modern languages, and hopefully the previous sections helped underscore how versatile Python's string processing techniques are. We will continue this topic in this chapter."
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    \"I have 3 errands to run\""
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "As versatile as this is, you typically need more freedom over the data you print out. For example, what if we want to print a bunch of data to exactly 4 decimal places? We can do this using formatted strings.\n",
+      "As versatile as adding strings together and printing them out, typically we need more freedom over the output. For example, what if we want to print a bunch of data to exactly 4 decimal places? We can do this using formatted strings.\n",
       "\n",
-      "Formatted strings share a syntax with the C **printf** statement. We make a string that has some funny *format characters* in it, and then pass a bunch of variables into the string that fill out those characters in different ways.\n",
+      "One way to do this is to make a string that has some funny *format characters* in it, and then pass variables into the string that fill out those characters in different ways.\n",
       "\n",
       "For example,"
      ]
@@ -2459,11 +2455,11 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    print(\"Pi as a decimal = %d\" % pi)\n",
-      "    print(\"Pi as a float = %f\" % pi)\n",
-      "    print(\"Pi with 4 decimal places = %.4f\" % pi)\n",
-      "    print(\"Pi with overall fixed length of 10 spaces, with 6 decimal places = %10.6f\" % pi)\n",
-      "    print(\"Pi as in exponential format = %e\" % pi)"
+      "    print(\"Pi as a decimal = %d\" % np.pi)\n",
+      "    print(\"Pi as a float = %f\" % np.pi)\n",
+      "    print(\"Pi with 4 decimal places = %.4f\" % np.pi)\n",
+      "    print(\"Pi with overall fixed length of 10 spaces, with 6 decimal places = %10.6f\" % np.pi)\n",
+      "    print(\"Pi as in exponential format = %e\" % np.pi)"
      ]
     },
     {
@@ -2502,9 +2498,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This is a simple formatting structure that will satisfy most of your string formatting needs. More information on different format symbols is available in the [string formatting part of the standard docs](http://docs.python.org/release/2.5.2/lib/typesseq-strings.html).\n",
-      "\n",
-      "It's worth noting that more complicated string formatting methods are in development, but I prefer this system due to its simplicity and its similarity to C formatting strings.\n",
+      "More information on different format symbols is available in the [string formatting part of the standard docs](http://docs.python.org/release/2.5.2/lib/typesseq-strings.html).\n",
       "\n",
       "Recall we discussed multiline strings. We can put format characters in these as well, and fill them with the percent sign as before."
      ]
@@ -2551,7 +2545,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The problem with a long block of text like this is that it's often hard to keep track of what all of the variables are supposed to stand for. There's an alternate format where you can pass a dictionary into the formatted string, and give a little bit more information to the formatted string itself. This method looks like:"
+      "The problem with a long block of text like this is that it's often hard to keep track of what all of the variables are supposed to stand for. There's an alternate format where you can pass a dictionary (a variable like a list but with strings rather than numbers as indices) into the formatted string, and give a little bit more information to the formatted string itself. This method looks like:"
      ]
     },
     {
@@ -2600,7 +2594,7 @@
       "\n",
       "As a scientist, you're less likely to be sending bulk mailings to a bunch of customers. But these are great methods for generating and submitting lots of similar runs, say scanning a bunch of different structures to find the optimal configuration for something.\n",
       "\n",
-      "For example, you can use the following template for NWChem input files:"
+      "For example, you can use the following template for ab-initio quantum chemical input files:"
      ]
     },
     {
@@ -2683,8 +2677,8 @@
      "source": [
       "    def my_enumerate(seq):\n",
       "        l = []\n",
-      "         for i in range(len(seq)):\n",
-      "             l.append((i,seq[i]))\n",
+      "         for i in range( len(seq) ):\n",
+      "             l.append( [i,seq[i]] )\n",
       "         return l\n",
       "    my_enumerate(oxygen_xy_coords)"
      ]
