Corrected some typos moved some code that needed to be typed out to a code cell and added (optional) to the more advanced components.

--- a/workshop_2/scientific_python.ipynb
+++ b/workshop_2/scientific_python.ipynb
@@ -60,8 +60,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -102,7 +101,7 @@
      "collapsed": false,
      "input": [
       "my_str_2 = \"here is another string\"\n",
-      "print(my_str_2)\n"
+      "print(my_str_2)"
      ],
      "language": "python",
      "metadata": {},
@@ -312,8 +311,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -377,18 +375,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-        "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-        "[1, 3, 5, 7, 9]\n"
-       ]
-      }
-     ],
-     "prompt_number": 19
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -475,8 +462,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -582,8 +568,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -672,8 +657,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1087,22 +1071,14 @@
       "With that out the way, we can now introduce some of Python's most popular scientific libraries: [Matplotlib](http://matplotlib.org/), [Numpy](http://www.numpy.org/) and [scipy](http://www.scipy.org/)\n",
       "\n",
       "## Plotting with Matplotlib\n",
-      "Plotting is so common that the IPython notebook can be launched with plotting specifically enabled, that's what we were doing by includnig the extra '--pylab inline' commands while launching the notebook. Those extra commands invisibly added\n",
+      "Plotting is so common that the IPython notebook can be launched with plotting specifically enabled, that's what we were doing by including the extra '--pylab inline' commands while launching the notebook. Those extra commands invisibly added\n",
       "\n",
       "    from pylab import *\n",
       "    \n",
-      "to the start of the notebook and means we can use functions from matplotlib like **plot**. The '=inline' part means the plots we create will be put directly into the notebook. This has the upside that we can see out plots alongside our code and data but the downside that they are static. If you omit the 'inline' when you launch ipython calls to **plot** will open up a window with the plot inside tha will allow you to interactively zoom in and out, move the axis etc. etc. \n",
+      "to the start of the notebook which means we can use functions from matplotlib like **plot**. The '=inline' part means the plots we create will be put directly into the notebook. This has the upside that we can see our plots alongside our code and data but the downside that they are static. If we omit the 'inline' when launching ipython notebook calls to **plot** will open up a separate window with the plot inside. This allows us to interactively zoom in and out, move the axis etc. etc. \n",
       "\n",
-      "As an example, we previous loaded up two different functions, the Fibonacci function, and the factorial function. Which one of these grows the fastest? Let's plot them. First, let's generate the Fibonacci sequence of length 20:"
+      "As an example, we previous loaded up two different functions, the Fibonacci function, and the factorial function. Which one of these grows the fastest? Let's plot them. First, let's generate the Fibonacci sequence of length 10:"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1670,9 +1646,11 @@
       "    \"Finite difference derivative of the function f\"\n",
       "    n = len(y)\n",
       "    d = np.zeros(n, 'd') # assume double\n",
+      "    \n",
       "    # Use centered differences for the interior points, one-sided differences for the ends\n",
       "    for i in range(1,n-1):\n",
       "        d[i] = (y[i+1]-y[i])/(x[i+1]-x[i])\n",
+      "        \n",
       "    d[0] = (y[1]-y[0])/(x[1]-x[0])\n",
       "    d[n-1] = (y[n-1]-y[n-2])/(x[n-1]-x[n-2])\n",
       "    return d"
@@ -1735,7 +1713,7 @@
       "\n",
       "$$ y'' = \\frac{y_{i+1}-2y_i+y_{i-1}}{x_{i+1}-x_{i-1}} $$\n",
       "\n",
-      "We can think of the first term in the Schrodinger equation as the overlap of the wave function $\\psi(x)$ with the second derivative of the wave function $\\frac{\\partial^2}{\\partial x^2}\\psi(x)$. Given the above expression for the second derivative, we can see if we take the overlap of the states $y_1,\\dots,y_n$ with the second derivative, we will only have three points where the overlap is nonzero, at $y_{i-1}$, $y_i$, and $y_{i+1}$. In matrix form, this leads to the tridiagonal Laplacian matrix, which has -2's along the diagonals, and 1's along the diagonals above and below the main diagonal.\n",
+      "We can think of the first term in the Schrodinger equation as the overlap of the wave function $\\psi(x)$ with the second derivative of the wave function $\\frac{\\partial^2}{\\partial x^2}\\psi(x)$. Given the above expression for the second derivative, we can see if we take the overlap of the states $y_1,\\dots,y_n$ with the second derivative, we will only have three points where the overlap is non-zero, at $y_{i-1}$, $y_i$, and $y_{i+1}$. In matrix form, this leads to the tridiagonal Laplacian matrix, which has -2's along the diagonals, and 1's along the diagonals above and below the main diagonal.\n",
       "\n",
       "The second term turns leads to a diagonal matrix with $V(x_i)$ on the diagonal elements. Putting all of these pieces together, we get:"
      ]
@@ -1747,9 +1725,11 @@
       "def Laplacian(x):\n",
       "    h = x[1]-x[0] # assume uniformly spaced points\n",
       "    n = len(x)\n",
-      "    M = -2*np.identity(n,'d')\n",
+      "    M = -2 * np.identity(n,'d')\n",
+      "    \n",
       "    for i in range(1, n):\n",
       "        M[i,i-1] = M[i-1,i] = 1\n",
+      "        \n",
       "    return M/h**2"
      ],
      "language": "python",
@@ -1974,19 +1954,19 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "There's a section below on parsing CSV data. We'll steal the parser from that. For an explanation, skip ahead to that section. Otherwise, just assume that this is a way to parse that text into a numpy array that we can plot and do other analyses with.\n",
-      "\n",
-      "    data = []\n",
-      "    for line in raw_data.splitlines():\n",
-      "        words = line.split(',')\n",
-      "        data.append(list(map(float,words)))\n",
-      "    data = np.array(data)"
+      "There's a section below on parsing CSV data. We'll steal the parser from that. For an explanation, skip ahead to that section. Otherwise, just assume that this is a way to parse that text into a numpy array that we can plot and do other analyses with."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "data = []\n",
+      "for line in raw_data.splitlines():\n",
+      "    words = line.split(',')\n",
+      "    data.append(list(map(float,words)))\n",
+      "data = np.array(data)"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -2036,22 +2016,24 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "For a pure exponential decay like this, we can fit the log of the data to a straight line. The above plot suggests this is a good approximation. Given a function\n",
+      "For a pure exponential decay like this, we can fit the log of the data to a straight line. The above plot suggests this is a good approximation. Given a function:\n",
+      "\n",
       "$$ y = Ae^{-ax} $$\n",
       "$$ \\log(y) = \\log(A) - ax$$\n",
+      "\n",
       "Thus, if we fit the log of the data versus x, we should get a straight line with slope $a$, and an intercept that gives the constant $A$.\n",
       "\n",
-      "There's a numpy function called **polyfit** that will fit data to a polynomial form. We'll use this to fit to a straight line (a polynomial of order 1)\n",
-      "\n",
-      "    params = polyfit(data[:,0], log(data[:,1]), 1)\n",
-      "    a = params[0]\n",
-      "    A = exp(params[1])"
+      "There's a numpy function called **polyfit** that will fit data to a polynomial form. We'll use this to fit to a straight line (a polynomial of order 1)"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "params = polyfit(data[:,0], log(data[:,1]), 1)\n",
+      "a = params[0]\n",
+      "A = exp(params[1])"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -2191,7 +2173,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "## Monte Carlo, random numbers, and computing $\\pi$\n",
+      "## Monte Carlo, random numbers, and computing $\\pi$ (Optional advanced material!)\n",
       "Many methods in scientific computing rely on Monte Carlo integration, where a sequence of (pseudo) random numbers are used to approximate the integral of a function. Python has good random number generators in the standard library. The **random()** function gives pseudorandom numbers uniformly distributed between 0 and 1:"
      ]
     },
@@ -2299,7 +2281,7 @@
      "source": [
       "The idea behind the program is that the ratio of the area of the unit circle to the square that inscribes it is $\\pi/4$, so by counting the fraction of the random points in the square that are inside the circle, we get increasingly good estimates to $\\pi$. \n",
       "\n",
-      "The above code uses some higher level Numpy tricks to compute the radius of each point in a single line, to count how many radii are below one in a single line, and to filter the x,y points based on their radii. To be honest, I rarely write code like this: I find some of these Numpy tricks a little too cute to remember them, and I'm more likely to use a list comprehension (see below) to filter the points I want, since I can remember that.\n",
+      "The above code uses some higher level Numpy tricks to compute the radius of each point in a single line, to count how many radii are below one in a single line, and to filter the x,y points based on their radii. These tricks are great if you can remember them but a simpler way would be to use a list comprehension (see below) to filter the points we want.\n",
       "\n",
       "As methods of computing $\\pi$ go, this is among the worst. A much better method is to use Leibniz's expansion of arctan(1):\n",
       "\n",
