Removed all code line numbers and moved some more code from comments to code cells

--- a/workshop_2/scientific_python.ipynb
+++ b/workshop_2/scientific_python.ipynb
@@ -1371,8 +1371,7 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 6
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1657,8 +1656,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1734,8 +1732,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 14
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -2096,13 +2093,30 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "    data = []\n",
-      "    for line in gauss_data.splitlines():\n",
-      "        words = line.split(',')\n",
-      "        \n",
-      "        data.append(list(map(float, words)))\n",
-      "    data = np.array(data)\n",
+      "Which we will parse it into an array:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data = []\n",
+      "for line in gauss_data.splitlines():\n",
+      "    words = line.split(',')\n",
       "    \n",
+      "    data.append(list(map(float, words)))\n",
+      "data = np.array(data)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "and plot:\n",
+      "\n",
       "    plot(data[:,0], data[:,1], 'bo')"
      ]
     },
@@ -2607,8 +2621,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 158
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -2909,8 +2922,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 169
+     "outputs": []
     },
     {
      "cell_type": "markdown",
