--- a/workshop_1/intro_to_python.ipynb
+++ b/workshop_1/intro_to_python.ipynb
@@ -29,7 +29,7 @@
       "\n",
       "    a = \"Hello\"\n",
       "   \n",
-      "that's followed by an empty *code cell* (a light grey rectagle with a label like *\"In[ ]\"*), you should \n",
+      "that's followed by an empty *code cell* (a light grey rectangle with a label like *\"In[ ]\"*), you should \n",
       "type the expression in the code cell, hit Shift+Return to *execute* it, and note the output.\n",
       "\n",
       "No copying and pasting! You'll learn the concepts better if you type them out yourself.\n",
@@ -1720,7 +1720,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "That was our first multi-line piece of code, and we need to pay attention to the indentation on the second line (the notebook trys to take care of this for you).\n",
+      "That was our first multi-line piece of code, and we need to pay attention to the indentation on the second line (the notebook tries to take care of this for you).\n",
       "Make sure to hit space four times before typing the second line; Python needs them to understand what we want it\n",
       "to do.  \n",
       "\n",
@@ -1870,7 +1870,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Guess what will happen when you enter these next two examples, and then type them out and see if you are correct. If you have trouble with the indenting, call over a demonstrator and practice together. It is important to be comfortable with indenting for tomorrow.\n",
+      "Guess what will happen when you enter these next two examples, and then type them out and see if you are correct. If you have trouble with the indenting, call over a demonstrator and practice together. It is important to be comfortable with indenting for the next workshop.\n",
       "\n",
       "    temperature = 32\n",
       "    if temperature > 60 and temperature < 75:\n",
@@ -2207,7 +2207,7 @@
       "## Lists\n",
       "Very often in a programming language, we want to keep a group of similar items together. Python does this using a data type called a **list**.\n",
       "\n",
-      "    days_of_the_week = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\"]"
+      "    days_of_the_week = [\"Sunday\", \"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\"]"
      ]
     },
     {
@@ -2422,7 +2422,7 @@
       "    \n",
       "    first_list = [1, 2, 3]\n",
       "    second_list = [4, 5, 6]\n",
-      "    concat_list = a + b\n",
+      "    concat_list = first_list + second_list\n",
       "    type(concat_list)"
      ]
     },
