--- a/workshop_2/scientific_python.ipynb
+++ b/workshop_2/scientific_python.ipynb
@@ -29,7 +29,7 @@
       "\n",
       "    a = np.array([1,2,3])\n",
       "   \n",
-      "that's followed by an empty *code cell* (a light grey rectagle with a label like *\"In[ ]\"*), you should \n",
+      "that's followed by an empty *code cell* (a light grey rectangle with a label like *\"In[ ]\"*), you should \n",
       "type the expression in the code cell, hit Shift+Return to *execute* it, and note the output.\n",
       "\n",
       "No copying and pasting! You'll learn the concepts better if you type them out yourself.\n",
@@ -599,7 +599,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Actually there is a problem with this code that may not initially be apparent. What happens if big_data has no negative numbers?"
+      "Actually there is a problem with this code that may not initially be apparent. What happens if big_data has zeros in it?"
      ]
     },
     {
@@ -770,10 +770,10 @@
       "Alternatively we can can use the .readlines() method to extract the file as a list of strings where each element of the list corresponds to one of the lines in the file:\n",
       "  \n",
       "    my_file1 = open('test_structure.xyz', 'r')\n",
-      "    my_file1_list_lines = my_file.readlines()\n",
+      "    my_file1_list_lines = my_file1.readlines()\n",
       "    my_file1.close()\n",
       "\n",
-      "    print(my_file_list_lines)"
+      "    print(my_file1_list_lines)"
      ]
     },
     {
@@ -798,10 +798,11 @@
      "input": [
       "my_data = \"\"\"4\n",
       "    \n",
-      "    C 0 0 0\n",
-      "    O 1 0 0\n",
-      "    H 0 1 0\n",
-      "    H 0 0 1\"\"\""
+      "C 0 0 0\n",
+      "O 1 0 0\n",
+      "H 0 1 0\n",
+      "H 0 0 1\n",
+      "\"\"\""
      ],
      "language": "python",
      "metadata": {},
@@ -849,11 +850,11 @@
       "my_file_list_lines = my_file.readlines()\n",
       "my_file.close()\n",
       "\n",
-      "my_file_list_lines[0] = '6'\n",
-      "my_file_list_lines.append('H 1 1 0')\n",
-      "my_file_list_lines.append('H 0 1 0')\n",
+      "my_file_list_lines[0] = '6\\n'\n",
+      "my_file_list_lines.append('H 1 1 0\\n')\n",
+      "my_file_list_lines.append('H 0 1 0\\n')\n",
       "\n",
-      "my_new_contents = \"\\n\".join(my_file1_list_lines)\n",
+      "my_new_contents = \"\".join(my_file_list_lines)\n",
       "\n",
       "my_file = open('test_structure2.xyz', 'w')\n",
       "my_file.write(my_new_contents)\n",
@@ -882,7 +883,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "It quickly become cumbersome if every time we want to use a function that is not part of Python we have to explicitly write it out in our notebook or .py file. Luckily there is a way to import pre-existing code in the form as modules.\n",
+      "It quickly becomes cumbersome if every time we want to use a function that is not part of Python we have to explicitly write it out in our notebook or .py file. Luckily there is a way to import pre-existing code in the form as modules.\n",
       "\n",
       "Inside your notebook directory you have a file called \"workshop_2_functions.py\" which contains two functions 'fibonacci' and 'factorial' which we want to use in our current notebook. (Take a look at 'workshop_2_functions.py' in an editor and see if you can understand it). There are several ways you can import and use them.\n",
       "\n",
